<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoletagemDados">
    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/plano_de_fundo3" />
    <Button
        android:id="@+id/btD6"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/luckiest_guy"
        android:onClick="rodarDadoD6"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/d6"
        android:textColor="@color/buttonText"
        android:textSize="19sp"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />
    <Button
        android:id="@+id/btD8"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/luckiest_guy"
        android:onClick="rodarDadoD8"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/d8"
        android:textColor="@color/buttonText"
        android:textSize="19sp"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btD6"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />
    <Button
        android:id="@+id/btD10"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/luckiest_guy"
        android:onClick="rodarDadoD10"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/d10"
        android:textColor="@color/buttonText"
        android:textSize="19sp"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintEnd_toStartOf="@+id/btD12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btD4"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/btD12"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/luckiest_guy"
        android:onClick="rodarDadoD12"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/d12"
        android:textColor="@color/buttonText"
        android:textSize="19sp"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btD6" />
    <Button
        android:id="@+id/btD20"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/luckiest_guy"
        android:onClick="rodarDadoD20"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/D20"
        android:textColor="@color/buttonText"
        android:textSize="19sp"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btD12"
        app:layout_constraintTop_toBottomOf="@+id/btD8" />
    <Button
        android:id="@+id/btD4"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/luckiest_guy"
        android:onClick="rodarDadoD4"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/d4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/buttonText"
        android:textSize="19sp"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintEnd_toStartOf="@+id/btD6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />
    <TextView
        android:id="@+id/resultado"
        android:layout_width="50dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/buttonText"
        android:textSize="45sp"
        app:fontFamily="@font/luckiest_guy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>